<resources>
    <string name="app_name">SaveMore</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your Email and Password or Sign Up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_profile">SaveMore</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Sign Up and SaveMore now!</string>
    <string name="btn_link_to_login">Already registered? Login from here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change Password</string>
    <string name="btn_change_email">Change Email</string>
    <string name="btn_send">Send Password Reset Email</string>
    <string name="btn_remove">Delete Account</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your registered Email address. Password reset Instruction will be sent to your mailbox.</string>
    <string name="name">Name</string>
    <string name="price"> £0.00</string>
    <string name="action_save">Update</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="addSharedCost">Add Shared Cost</string>
    <string name="addSavingsGoal">Add Savings Goal</string>
    <string name="description">Goal Name</string>
    <string name ="tip1">Add two or more people involved in shared cost</string>
    <string name ="tip1des">Insert "first user email address" along with "," in between the next user email address in the Email field.</string>
    <string name="tip2des">For example: myemail@domain.com,myemail2@domain.com</string>
    <string name ="tip2">Add two or more non-SaveMore user in shared cost </string>
    <string name ="tip2des1">Insert "first name" along with "," in between the next person name in Other Friends field.</string>
    <string name="tip2des2">For example: Louisa, Andee, Even</string>



</resources>